<resources>
	<string name="app_name">Flickr Search</string>

	<string name="action_refresh">Refresh</string>

	<string name="please_enter_text_search">Please enter a search request.</string>
	<string name="error_occurred">Error occurred.\nCheck your Internet connection.</string>
	<string name="network_unavailable">Please check your Internet connection.</string>
	<string name="progress_loading">loading…</string>
	<string name="nothing_found_try_other_request">Nothing found.\nTry another request.</string>
	<string name="action_send">Send request</string>

    <string name="cd_result_item_photo">result photo</string>
    <string name="header_title">Title:</string>
    <string name="header_photo">Photo:</string>

</resources>
