<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	tools:context=".MainActivity"
	>

	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay"
		>


		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			app:layout_scrollFlags="scroll|enterAlways"
			app:popupTheme="@style/AppTheme.PopupOverlay"
			>

			<android.support.v7.widget.SearchView
				android:id="@+id/searchView"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				app:goIcon="@drawable/ic_go"
				app:iconifiedByDefault="false"
				app:queryHint="Search request"
				android:imeOptions="actionSend"
				/>

		</android.support.v7.widget.Toolbar>

	</android.support.design.widget.AppBarLayout>


	<FrameLayout
		android:id="@+id/fr_list"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingBottom="?attr/actionBarSize"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		/>


</android.support.design.widget.CoordinatorLayout>
